doc: Added drawing to the google maps API key

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometrykey=AIzaSyC9Mj0z9LIsiHif3l_FiDMJL4l4o083lOA"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawingkey=AIzaSyC9Mj0z9LIsiHif3l_FiDMJL4l4o083lOA"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
